[FIX](portfolio modal css) fix overflow wrap to normal

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -63,6 +63,7 @@
     margin: 0px 0px 10px 0px;
     width: 100%;
     float: left;
+    overflow-wrap: normal;
 }
 
 .detailbox .first {
